--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link type="text/css" rel="stylesheet" href="css/main.css"><link>
   </head>
   <body>
-    <div>
+    <div class="header">
       <h1>Alive</h1>
       <h2>Is your application alive?</h2>
     </div>
