--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <link type="text/css" rel="stylesheet" href="css/main.css"><link>
   </head>
   <body>
-    <div class="header">
-      <h1>Alive</h1>
-      <h2>Is your application alive?</h2>
+    <div class="body">
+      <div class="header">
+        <h1>Alive</h1>
+        <h2>Is your application alive?</h2>
+      </div>
     </div>
   </body>
 </html>
