Update the example to injest a single function

--- a/html/example.html
+++ b/html/example.html
@@ -9,7 +9,9 @@
         
       </div>
       <div id="code" contenteditable class="border">
-        
+       function perform(a, b) {
+				return a + b;
+				} 
       </div>
       <button id="btnCommit">
         Commit
